tests/cli/co2cargo/miri_null_deref/stderr.expected
error: Undefined Behavior: memory access failed: attempting to access 4 bytes, but got null pointer
 --> src/main.co2:3:5
  |
3 |     *ptr = 1;
  |     ^^^^^^^^ Undefined Behavior occurred here
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace
